--- a/apache2-php7.2-mysql5.7/apache-php/Dockerfile
+++ b/apache2-php7.2-mysql5.7/apache-php/Dockerfile
@@ -1,3 +1,10 @@
 FROM php:7.2-apache
 
 RUN docker-php-ext-install mysqli pdo pdo_mysql
+
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends git zip
+
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+
+RUN composer --version
